@@ -1,19 +1,25 @@
 package com.kenzie.capstone.service;
 
 import com.kenzie.capstone.service.dao.EventDao;
+<<<<<<< HEAD
 import com.kenzie.capstone.service.dao.ExampleDao;
+=======
+>>>>>>> origin/main
 import com.kenzie.capstone.service.exceptions.InvalidDataException;
 import com.kenzie.capstone.service.model.EventData;
-import com.kenzie.capstone.service.model.EventRecord;
-import com.kenzie.capstone.service.model.ExampleData;
-import com.kenzie.capstone.service.model.ExampleRecord;
+import com.kenzie.capstone.service.model.LambdaEventRecord;
+import com.kenzie.capstone.service.model.LambdaEventRequest;
+import com.kenzie.capstone.service.model.LambdaEventResponse;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.mockito.ArgumentCaptor;
 
 import java.util.ArrayList;
+<<<<<<< HEAD
 import java.util.Arrays;
+=======
+>>>>>>> origin/main
 import java.util.Collections;
 import java.util.List;
 
@@ -38,24 +44,22 @@ class LambdaServiceTest {
 
     @Test
     void setDataTest() {
-        ArgumentCaptor<String> idCaptor = ArgumentCaptor.forClass(String.class);
-        ArgumentCaptor<String> dataCaptor = ArgumentCaptor.forClass(String.class);
+        //GIVEN
+        LambdaEventRequest eventRequest = new LambdaEventRequest();
+        eventRequest.setEventId("fakeid");
+        eventRequest.setDate("2021-01-01");
+        eventRequest.setCustomerEmail("fakeemail");
+        eventRequest.setCustomerName("fakename");
 
-        // GIVEN
-        String data = "somedata";
+        //WHEN
+        LambdaEventResponse response = this.lambdaService.addEvent(eventRequest);
 
-        // WHEN
-        EventData response = this.lambdaService.setEventData(data);
-
-        // THEN
-        verify(eventDao, times(1)).setEventData(idCaptor.capture(), dataCaptor.capture());
-
-        assertNotNull(idCaptor.getValue(), "An ID is generated");
-        assertEquals(data, dataCaptor.getValue(), "The data is saved");
-
-        assertNotNull(response, "A response is returned");
-        assertEquals(idCaptor.getValue(), response.getEventId(), "The response id should match");
-        assertEquals(data, response.getData(), "The response data should match");
+        //THEN
+        assertNotNull(response);
+        assertEquals("fakeid", response.getEventId());
+        assertEquals("2021-01-01", response.getDate());
+        assertEquals("fakeemail", response.getCustomerEmail());
+        assertEquals("fakename", response.getCustomerName());
     }
 
     @Test
@@ -64,13 +68,17 @@ class LambdaServiceTest {
 
         // GIVEN
         String id = "fakeid";
-        String data = "somedata";
-        EventRecord record = new EventRecord();
+        String name = "fakename";
+        String email = "fakeemail";
+        String date = "2021-01-01";
+
+        LambdaEventRecord record = new LambdaEventRecord();
         record.setEventId(id);
-        record.setData(data);
+        record.setCustomerName(name);
+        record.setCustomerEmail(email);
+        record.setDate(date);
 
-
-        when(eventDao.getEventData(id)).thenReturn(Arrays.asList(record));
+        when(eventDao.getEventData(id)).thenReturn(List.of(record));
 
         // WHEN
         EventData response = this.lambdaService.getEventData(id);
@@ -82,7 +90,6 @@ class LambdaServiceTest {
 
         assertNotNull(response, "A response is returned");
         assertEquals(id, response.getEventId(), "The response id should match");
-        assertEquals(data, response.getData(), "The response data should match");
         reset(eventDao);
     }
 
@@ -108,6 +115,112 @@ class LambdaServiceTest {
     @Test
     void deleteDataTest() {
         //GIVEN
+<<<<<<< HEAD
+=======
+        List<String> ids = new ArrayList<>();
+        ids.add("fakeid");
+
+        LambdaEventRecord record = new LambdaEventRecord();
+        record.setEventId("fakeid");
+
+        //WHEN
+        when(eventDao.deleteEventData(record)).thenReturn(true);
+        boolean response = this.lambdaService.deleteEventData(ids);
+
+        //THEN
+        verify(eventDao, times(1)).deleteEventData(record);
+        assertTrue(response);
+    }
+
+    @Test
+    void deleteData_nullList_throwsInvalidDataException() {
+        //GIVEN
+        //WHEN && THEN
+        assertThrows(InvalidDataException.class, () -> this.lambdaService.deleteEventData(null));
+    }
+
+    @Test
+    void deleteData_nullId_throwsInvalidDataException() {
+        //GIVEN
+        List<String> ids = new ArrayList<>();
+        ids.add(null);
+
+        //WHEN && THEN
+        assertThrows(InvalidDataException.class, () -> this.lambdaService.deleteEventData(ids));
+    }
+
+    @Test
+    void deleteData_daoReturnsFalse_returnsFalse() {
+        //GIVEN
+        List<String> ids = new ArrayList<>();
+        ids.add("fakeid");
+
+        LambdaEventRecord record = new LambdaEventRecord();
+        record.setEventId("fakeid");
+
+        //WHEN
+        when(eventDao.deleteEventData(record)).thenReturn(false);
+        boolean response = this.lambdaService.deleteEventData(ids);
+
+        //THEN
+        verify(eventDao, times(1)).deleteEventData(record);
+        assertFalse(response);
+    }
+
+    @Test
+    void addNewEvent_Test() {
+        //GIVEN
+        LambdaEventRequest eventRequest = new LambdaEventRequest();
+        eventRequest.setEventId("fakeid");
+        eventRequest.setDate("2021-01-01");
+        eventRequest.setCustomerEmail("fakeemail");
+        eventRequest.setCustomerName("fakename");
+
+        //WHEN
+        LambdaEventResponse response = this.lambdaService.addEvent(eventRequest);
+
+        //THEN
+        assertNotNull(response);
+        assertEquals("fakeid", response.getEventId());
+        assertEquals("2021-01-01", response.getDate());
+        assertEquals("fakeemail", response.getCustomerEmail());
+        assertEquals("fakename", response.getCustomerName());
+    }
+
+    @Test
+    void addNewEvent_nullEventRequest_throwsInvalidDataException() {
+        //GIVEN
+
+        //WHEN && THEN
+        assertThrows(InvalidDataException.class, () -> this.lambdaService.addEvent(null));
+    }
+
+    @Test
+    void addNewEvent_nullEventId_throwsInvalidDataException() {
+        //GIVEN
+        LambdaEventRequest eventRequest = new LambdaEventRequest();
+        eventRequest.setEventId(null);
+        eventRequest.setDate("2021-01-01");
+        eventRequest.setCustomerEmail("fakeemail");
+        eventRequest.setCustomerName("fakename");
+
+        //WHEN && THEN
+        assertThrows(InvalidDataException.class, () -> this.lambdaService.addEvent(eventRequest));
+    }
+
+    @Test
+    void addNewEvent_invalidName_throwsInvalidDataException() {
+        //GIVEN
+        LambdaEventRequest eventRequest = new LambdaEventRequest();
+        eventRequest.setEventId(null);
+        eventRequest.setDate("2021-01-01");
+        eventRequest.setCustomerEmail("fakeemail");
+        eventRequest.setCustomerName("");
+
+        //WHEN && THEN
+        assertThrows(InvalidDataException.class, () -> this.lambdaService.addEvent(eventRequest));
+    }
+>>>>>>> origin/main
 
 
         //WHEN
